@@ -1534,99 +1534,6 @@ int write_data (const char *fname, int *list,
     return err;
 }
 
-static void dataset_type_string (char *str, const DATAINFO *pdinfo)
-{
-    if (dataset_is_time_series(pdinfo)) {
-	strcpy(str, _("time series"));
-    } else if (dataset_is_panel(pdinfo)) {
-        strcpy(str, _("panel"));
-    } else {
-        strcpy(str, _("undated"));
-    }
-}
-
-static void pd_string (char *str, const DATAINFO *pdinfo)
-{
-    if (custom_time_series(pdinfo)) {
-	strcpy(str, _("special"));
-    } else {
-	switch (pdinfo->pd) {
-	case 1:
-	    strcpy(str, _("annual")); break;
-	case 4:
-	    strcpy(str, _("quarterly")); break;
-	case 12:
-	    strcpy(str, _("monthly")); break;
-	case 24:
-	    strcpy(str, _("hourly")); break;
-	case 52:
-	    strcpy(str, _("weekly")); break;
-	case 5:
-	case 6:
-	case 7:
-	    strcpy(str, _("daily")); break;
-	case 10:
-	    strcpy(str, _("decennial")); break;
-	default:
-	    strcpy(str, _("unknown")); break;
-	}
-    }
-}
-
-/**
- * data_report:
- * @pdinfo: data information struct.
- * @fname: filename for current datafile.
- * @prn: gretl printing struct.
- * 
- * Write out a summary of the content of the current data set.
- * 
- * Returns: 0 on successful completion, non-zero on error.
- * 
- */
-
-int data_report (const DATAINFO *pdinfo, const char *fname, PRN *prn)
-{
-    char startdate[OBSLEN], enddate[OBSLEN], tmp[MAXLEN];
-    char tstr[48];
-    int i;
-
-    ntodate(startdate, 0, pdinfo);
-    ntodate(enddate, pdinfo->n - 1, pdinfo);
-
-    sprintf(tmp, _("Data file %s\nas of"), 
-	    (*fname != '\0')? fname : _("(unsaved)"));
-
-    print_time(tstr);
-    pprintf(prn, "%s %s\n\n", tmp, tstr);
-
-    if (pdinfo->descrip != NULL && *pdinfo->descrip != '\0') {
-	pprintf(prn, "%s:\n\n", _("Description"));
-	pputs(prn, pdinfo->descrip);
-	pputs(prn, "\n\n");
-    }
-
-    dataset_type_string(tmp, pdinfo);
-    pprintf(prn, "%s: %s\n", _("Type of data"), tmp);
-    
-    if (dataset_is_time_series(pdinfo)) {
-	pd_string(tmp, pdinfo);
-	pprintf(prn, "%s: %s\n", _("Frequency"), tmp);
-    }	
-
-    pprintf(prn, "%s: %s - %s (n = %d)\n\n", _("Range"),
-	    startdate, enddate, pdinfo->n);
-
-    pprintf(prn, "%s:\n\n", _("Listing of variables"));
-
-    for (i=1; i<pdinfo->v; i++) {
-	pprintf(prn, "%*s  %s\n", VNAMELEN, pdinfo->varname[i], 
-		VARLABEL(pdinfo, i));
-    }
-
-    return 0;
-}
-
 /* read data "labels" from file */
 
 static int readlbl (const char *lblfile, DATAINFO *pdinfo)
