@@ -24,6 +24,9 @@ version 1.8.5, in progress
   estimating an ordered probit or logit model
 - Fix bug: the --output option to the "gnuplot" command was
   not being respected in the gretl console
+- GUI, main window, Sample menu: add an item to print 
+  details of the current sample status
+- On closing GUI session, close any open graph windows 
 - win32: update GTK+ stack to 2.16.6; update gnuplot to
   CVS as of 2009-09-13
   
